Add and delete model files, update inference notebook, and update README.md

--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -8,10 +8,8 @@
    "source": [
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "import utils\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import mean_squared_error as rmse, classification_report, pairwise_distances, accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import mean_squared_error as rmse, classification_report\n",
     "import h5py\n",
     "from IPython.display import display\n",
     "import pandas as pd\n",
@@ -32,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models.ICFormer import ICFormer\n",
+    "import ICFormer\n",
     "\n",
     "model = ICFormer(\n",
     "        look_back=5,\n",
@@ -47,7 +45,7 @@
     "    )\n",
     "\n",
     "model.build(input_shape=(None, 5, 128))\n",
-    "model.load_weights('../saved/LFP/ICFormer_bestModel.hdf5')"
+    "model.load_weights('../saved/ICFormer_bestModel.hdf5')"
    ]
   },
   {
@@ -113,13 +111,19 @@
     "chemistry = 'LFP' # 'LFP', 'NCA' or 'NMC'\n",
     "path = '../data/'+chemistry\n",
     "\n",
-    "\n",
     "# load data\n",
     "with h5py.File(path+'/test/datasets.h5', 'r') as h5f:\n",
     "    test_datasets_ICs = h5f['x_test'][:]\n",
     "    test_datasets_degradation_modes = h5f['y_test'][:]\n",
     "    test_datasets_QLs = h5f['y_test_QLs'][:]\n",
     "    test_datasets_silent_modes = h5f['y_test_silent_modes'][:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first table correspond to the training cell, the rest to the test cells"
    ]
   },
   {
