--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Remove sample in which the IC curves are the same"
+    "7. Remove samples in which the IC curves are the same"
    ]
   },
   {
